--- a/ovirt-optimizer-jetty/src/main/resources/log4j.properties
+++ b/ovirt-optimizer-jetty/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-oot logger option
+# Root logger option
 log4j.rootLogger=INFO, stdout
  
 # Direct log messages to stdout
@@ -7,3 +7,5 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
+log4j.logger.org.optaplanner=INFO
+log4j.logger.org.ovirt.optimizer=INFO
