--- a/ovirt-optimizer-jetty/src/main/webapp/WEB-INF/web.xml
+++ b/ovirt-optimizer-jetty/src/main/webapp/WEB-INF/web.xml
@@ -18,11 +18,12 @@
         </resource-env-ref-type>
     </resource-env-ref>
 
-    <!-- RESTEasy //-->
+    <!-- RESTEasy
+    Disable scanning to workaround sannotation issue on F19 deployment
     <context-param>
         <param-name>resteasy.scan</param-name>
         <param-value>true</param-value>
-    </context-param>
+    </context-param> //-->
 
     <context-param>
         <param-name>resteasy.resources</param-name>
