--- a/ovirt-optimizer-core/pom.xml
+++ b/ovirt-optimizer-core/pom.xml
@@ -12,26 +12,11 @@
 
     <packaging>jar</packaging>
 
-    <dependencyManagement>
-
-        <dependencies>
-
-            <dependency>
-                <groupId>org.optaplanner</groupId>
-                <artifactId>optaplanner-bom</artifactId>
-                <type>pom</type>
-                <version>6.0.1.Final</version>
-                <scope>import</scope>
-            </dependency>
-
-        </dependencies>
-
-    </dependencyManagement>
-
     <dependencies>
         <dependency>
             <groupId>org.optaplanner</groupId>
             <artifactId>optaplanner-core</artifactId>
+            <version>6.1.0.CR1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -70,11 +55,6 @@
             <artifactId>cdi-api</artifactId>
             <version>1.0-SP1</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
         </dependency>
         <dependency>
             <groupId>org.ovirt.engine.sdk</groupId>
