Update the maven information needed to build RHEV version of optimizer
Change-Id: Ic947b0dbfe23e129b7c6c0875f95b7d1c1a3f652

--- a/pom.xml
+++ b/pom.xml
@@ -102,12 +102,14 @@
             <repositories>
                 <repository>
                     <id>redhat</id>
-                    <url>http://maven.repository.redhat.com/</url>
+                    <url>${redhat.repository}</url>
                 </repository>
             </repositories>
 
             <properties>
+                <redhat.repository>https://maven.repository.redhat.com/techpreview/all</redhat.repository>
                 <optaplanner.version>6.2.0.Final-redhat-4</optaplanner.version>
+                <ovirt-engine.sdk.version>3.6.0.0.Alpha</ovirt-engine.sdk.version>
             </properties>
         </profile>
     </profiles>
