Configure ovirt-optimizer logging for both JBoss and Jetty
The logging is now redirected to ovirt-optimizer.log both
in Jetty and in JBoss 7.1 AS. The standard logging mechanism
of JBoss is not used to avoid log flood. Also the default
level is set to ERROR for console and WARN for log file.

Change-Id: I98b5ac036a67d2dafed26a488d00024f098e239d

--- a/ovirt-optimizer-jboss7/src/main/resources/log4j.properties
+++ b/ovirt-optimizer-jboss7/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 log4j.appender.appout=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.appout.File=${jetty.logs}/ovirt-optimizer.log
+log4j.appender.appout.File=${jboss.server.log.dir}/ovirt-optimizer.log
 log4j.appender.appout.Append=false
 log4j.appender.appout.layout=org.apache.log4j.PatternLayout
 log4j.appender.appout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
