--- a/ovirt-optimizer-jboss7/pom.xml
+++ b/ovirt-optimizer-jboss7/pom.xml
@@ -18,6 +18,16 @@
             <groupId>org.ovirt.optimizer</groupId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.log4j.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
