--- a/ovirt-optimizer-jetty/pom.xml
+++ b/ovirt-optimizer-jetty/pom.xml
@@ -47,12 +47,12 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.7</version>
+            <version>${slf4j.log4j.version}</version>
         </dependency>
     </dependencies>
 
