--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.7</version>
+            <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
 
@@ -50,6 +50,10 @@
         <optaplanner.version>6.2.0.Final</optaplanner.version>
         <ovirt-engine.sdk.version>3.5.2.0</ovirt-engine.sdk.version>
         <quartz.version>2.2.0</quartz.version>
+
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <slf4j.log4j.version>1.7.7</slf4j.log4j.version>
     </properties>
 
     <build>
