--- a/ovirt-optimizer-jetty/src/main/resources/log4j.properties
+++ b/ovirt-optimizer-jetty/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 log4j.appender.appout=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.appout.File=${jetty.logs}/ovirt-optimizer.log
-log4j.appender.appout.Append=false
+log4j.appender.appout.Append=true
 log4j.appender.appout.layout=org.apache.log4j.PatternLayout
 log4j.appender.appout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
