--- a/ovirt-optimizer-jetty/src/main/resources/log4j.properties
+++ b/ovirt-optimizer-jetty/src/main/resources/log4j.properties
@@ -15,4 +15,4 @@ log4j.appender.appout.layout=org.apache.log4j.PatternLayout
 log4j.appender.appout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 log4j.logger.org.optaplanner=WARN, appout
-log4j.logger.org.ovirt.optimizer=WARN, appout
+log4j.logger.org.ovirt.optimizer=INFO, appout
