Update Jetty configuration to use webApp xml element for setting the context path
Change-Id: I8ead48e911d61ea1eb84cd0ee7e21d3637dd7b08

--- a/ovirt-optimizer-jetty/pom.xml
+++ b/ovirt-optimizer-jetty/pom.xml
@@ -95,7 +95,9 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jettyVersion}</version>
                 <configuration>
-                    <contextPath>/ovirt-optimizer</contextPath>
+                    <webApp>
+                        <contextPath>/ovirt-optimizer</contextPath>
+                    </webApp>
                     <stopPort>1353</stopPort>
                     <stopKey>quit</stopKey>
                     <jvmArgs>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArgs>
