--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <!-- other plugin versions -->
         <version.compiler.plugin>2.3.1</version.compiler.plugin>
         <version.ejb.plugin>2.3</version.ejb.plugin>
+        <version.findbugs>3.0.1</version.findbugs>
+        <version.findbugs.annotations>3.0.0</version.findbugs.annotations>
 
         <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.7</maven.compiler.target>
@@ -48,7 +50,7 @@
         <xpp3_min.version>1.1.4c</xpp3_min.version>
 
         <optaplanner.version>6.2.0.Final</optaplanner.version>
-        <ovirt-engine.sdk.version>3.5.2.0</ovirt-engine.sdk.version>
+        <ovirt-engine.sdk.version>3.6.0.0</ovirt-engine.sdk.version>
         <quartz.version>2.2.0</quartz.version>
 
         <log4j.version>1.2.17</log4j.version>
