--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
         <!-- fixes deployment issue //-->
         <xpp3_min.version>1.1.4c</xpp3_min.version>
 
-        <optaplanner.version>6.2.0.Final</optaplanner.version>
-        <ovirt-engine.sdk.version>3.6.0.0</ovirt-engine.sdk.version>
+        <optaplanner.version>6.3.0.Final</optaplanner.version>
+        <ovirt-engine.sdk.version>3.6.0.3</ovirt-engine.sdk.version>
         <quartz.version>2.2.0</quartz.version>
 
         <log4j.version>1.2.17</log4j.version>
@@ -107,15 +107,19 @@
 
             <repositories>
                 <repository>
+                    <id>central</id>
+                    <url>http://repo1.maven.org/maven2/</url>
+                </repository>
+                <repository>
                     <id>redhat</id>
                     <url>${redhat.repository}</url>
                 </repository>
             </repositories>
 
             <properties>
-                <redhat.repository>https://maven.repository.redhat.com/techpreview/all</redhat.repository>
-                <optaplanner.version>6.2.0.Final-redhat-4</optaplanner.version>
-                <ovirt-engine.sdk.version>3.6.0.0.Alpha</ovirt-engine.sdk.version>
+                <redhat.repository>https://maven.repository.redhat.com/ga/all</redhat.repository>
+                <optaplanner.version>6.3.0.Final-redhat-5</optaplanner.version>
+                <ovirt-engine.sdk.version>3.6.0.3</ovirt-engine.sdk.version>
             </properties>
         </profile>
     </profiles>
