Optaplanner 6.4 dependency for RHEV build
Change-Id: I8f6df0573570b04510e0f7a8d3f451fdfccb9d7d
Signed-off-by: Martin Sivak <msivak@redhat.com>

--- a/pom.xml
+++ b/pom.xml
@@ -117,8 +117,8 @@
             </repositories>
 
             <properties>
-                <redhat.repository>https://maven.repository.redhat.com/ga/all</redhat.repository>
-                <optaplanner.version>6.3.0.Final-redhat-5</optaplanner.version>
+                <redhat.repository>https://maven.repository.redhat.com/ga</redhat.repository>
+                <optaplanner.version>6.4.0.Final-redhat-3</optaplanner.version>
                 <ovirt-engine.sdk.version>3.6.0.3</ovirt-engine.sdk.version>
             </properties>
         </profile>
