--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,8 @@
         <xpp3_min.version>1.1.4c</xpp3_min.version>
 
         <optaplanner.version>6.4.0.Final</optaplanner.version>
-        <ovirt-engine.sdk.version>3.6.0.3</ovirt-engine.sdk.version>
+        <ovirt-engine.sdk.version>3.6.8.0</ovirt-engine.sdk.version>
+        <ovirt-engine.sdk4.version>4.0.0</ovirt-engine.sdk4.version>
         <quartz.version>2.2.0</quartz.version>
 
         <log4j.version>1.2.17</log4j.version>
