--- a/ovirt-optimizer-core/pom.xml
+++ b/ovirt-optimizer-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>ovirt-optimizer</artifactId>
         <groupId>org.ovirt.optimizer</groupId>
-        <version>0.15</version>
+        <version>0.16-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
